added logout functionality and adjusted ui elements for navbar

--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -1,7 +1,15 @@
 
 a {
-
   text-decoration: none;
+}
+
+.navbar-brand:hover {
+  scale: 1.1;
+}
+
+.nav-link:hover {
+  scale: 1.1;
+  text-decoration: underline;
 }
 
 nav .shift-item .active {
